@@ -1,6 +1,7 @@
 ### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
 Demo::Foo - <Insert description> (dynamic, version 0.1.0)
     [Function] hello_plugin_world
+    [Function] print_hello
     [Event] plugin_event
 
 ===
@@ -9,6 +10,7 @@ plugin: automatically loaded at startup
 plugin: automatically loaded at startup
 plugin: manually loaded
 calling bif, Hello from the plugin!
+Hello from a void BiF
 =-=
 =-=
 ===
@@ -17,7 +19,9 @@ plugin: automatically loaded at startup
 plugin: automatically loaded at startup
 plugin: manually loaded
 calling bif, Hello from the plugin!
+Hello from a void BiF
 ===
 plugin: automatically loaded at startup
 plugin: manually loaded
 calling bif, Hello from the plugin!
+Hello from a void BiF
